--- a/Info.plist
+++ b/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSSystemAdministrationUsageDescription</key>
+	<string>Need files</string>
 	<key>NSContactsUsageDescription</key>
 	<string>This app requires access to your contacts to display and manage your contacts list.</string>
 </dict>
